--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,4 +18,4 @@ jobs:
       - name: Install flake8
         run: pip install flake8
       - name: Run flake8
-        run: flake8 -exclude ./utils/config.py --count --max-line-length=127 --statistics
+        run: flake8 --exclude ./utils/config.py --count --max-line-length=127 --statistics
